# test-task-Neolithic

./: README.md  main.py  parser.py  pyproject.toml  requirements.txt  updated.csv  Экспозиция ТДСК с 01.07.2023 по 31.12.2023.xlsx
