[project]
name = "test-task-neolithic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "selectolax>=0.4.7",
]

[tool.ruff]
preview = true
fix = true
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
